#1237 - resources k licencim
